# woeplanet-www-spelunker

./: .dockerignore  .env.sample  .env.template  .gitignore  Gruntfile.js  LICENSE.txt  Makefile  README.md  docker-compose.local.yml  docker-compose.yml  gunicorn.conf.py  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
docker/spelunker/: Dockerfile
etc/: 000-woeplanet.home.vicchi.org.conf  000-woeplanet.org.conf  woeplanet-local.service  woeplanet.service
etc/elasticsearch/: elasticsearch.yml
spelunker/: querymanager.py  spelunker.py
src/js/: label.js  location.js  main.js  map.js  results.js
src/scss/: main.scss
static/css/: site.css
static/js/: site.js  site.min.js  site.min.js.map
templates/: 404.html.jinja  500.html.jinja  about.html.jinja  base.html.jinja  countries.html.jinja  credits.html.jinja  home.html.jinja  nearby.html.jinja  place.html.jinja  placetypes.html.jinja  results.html.jinja  search.html.jinja  test.html.jinja
templates/includes/: footer-content.html.jinja  footer.html.jinja  load-scripts.html.jinja  search-query.html.jinja  sidebar-info.html.jinja  sidebar.html.jinja
www/: flushcache.py  querymanager.py  spelunker.py  woeplanet-spelunker.py
www/static/css/: site.css
www/static/js/: site.min.js
www/templates/: 404.html.jinja  500.html.jinja  about.html.jinja  base.html.jinja  countries.html.jinja  credits.html.jinja  home.html.jinja  map.html.jinja  pagination.html.jinja  place.html.jinja  placetypes.html.jinja  results.html.jinja  search.html.jinja  test.html.jinja
(+6 files in other folders)
