[metadata]
name = woeplanet_www_spelunker
version = file: VERSION
description = "The WoePlanet Spelunker"
long_description = file: README.md
author = "Gary Gale"
author_email = gary@vicchi.org
url = https://github.com/woeplanet/woeplanet-www-spelunker

[options]
zip_safe = False
python_requires = >= 3.8
packages = find:
# install_requires =
#     requests >= 2.25.1

[options.packages.find]
exclude =
    tests
    tests.*

[options.package_data]
* = VERSION

[flake8]
max_line_length = 150
ignore = AZ100,B008,B028,E124,E501
show_source = True

[pylint.master]
extension-pkg-whitelist=pydantic
init-hook="import sys; sys.path.append('.')"

[pylint.format]
max-line-length=150

[pylint.design]
max-attributes=15
max-locals=50
max-branches=50
max-statements=100

[pylint.elif]
max-nested-blocks=10

[pylint.variables]
good-names=q,db

[pylint.similarities]

# Minimum lines number of a similarity.
min-similarity-lines=100

# Ignore comments when computing similarities.
ignore-comments=yes

# Ignore docstrings when computing similarities.
ignore-docstrings=yes

# Ignore imports when computing similarities.
ignore-imports=no

[pylint.typecheck]
generated-members=app.logger

[tool:pytest]
log_cli = True
log_cli_level = warning
